# AoC2023

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
day-01-trebuchet/: Cargo.toml
day-01-trebuchet/src/: lib.rs
day-02-cube-conundrum/: Cargo.toml
day-02-cube-conundrum/src/: lib.rs
day-03-gear-ratios/: Cargo.toml
day-03-gear-ratios/src/: lib.rs
day-04-scratchcards/: Cargo.toml
day-04-scratchcards/src/: lib.rs
day-05-if-you-give-a-seed-a-fertilizer/: Cargo.toml
day-05-if-you-give-a-seed-a-fertilizer/src/: lib.rs
day-06-wait-for-it/: Cargo.toml
day-06-wait-for-it/src/: lib.rs
day-07-camel-cards/: Cargo.toml
day-07-camel-cards/src/: lib.rs
src/: main.rs
