[package]
name = "aoc_2023"
version = "0.1.0"
authors = ["Arjen Laarhoven <arjen@laarhoven.info>"]
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
# jemallocator = "0.5.0"
runner = { path = "runner" }
day-01 = { path = "day-01-trebuchet" }
day-02 = { path = "day-02-cube-conundrum" }
day-03 = { path = "day-03-gear-ratios" }
day-04 = { path = "day-04-scratchcards" }
